fixed gaps error

--- a/style.css
+++ b/style.css
@@ -285,24 +285,24 @@ body{
 }
 
 #left-div{
-    height: 80vh;
+    height: 50vh;
     width: 100%;
     /* border: 2px solid black; */
 }   
 
 #right-div{
-    height: 80vh;
+    height: 50vh;
     width: 100%;
     /* border: 2px solid red; */
 }
 
 #bottom-div{
-    height: 80vh;
+    height: 60vh;
     width: 100%;
     position: static;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 #ss{
